<resources>
    <string name="app_name">Near Expire Admin</string>
    <string name="fragment_launch_screen_title">Merchant Connect</string>
    <string name="fragment_launch_screen_description">Sell your products efficiently with Merchant Connect!</string>
    <string name="intro3_title">Manage Your Store</string>
    <string name="intro3_description">Discover the key features designed for merchants to efficiently manage inventory, track sales, and gain insights into their store\'s performance.</string>
    <string name="intro2_title">Connect with Buyers</string>
    <string name="intro2_description">Easily connect with potential customers and unlock new opportunities. Discover the benefits of engaging with buyers directly through our platform.</string>
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="register_description">Join us to connect with buyers and sell your unused products.</string>
    <string name="register_check_box_string"><![CDATA[I agree with Terms & Conditions]]></string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="already_has_an_account">Already Has An Account ?</string>
    <string name="dont_have_an_account">Don\'t Have An Account ?</string>
    <string name="sign_in_">Sign In</string>
    <string name="sign_up_">Sign Up</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="store_information">Store Information</string>
    <string name="store_name">Store Name</string>
    <string name="store_description_hint">"Describe your store "</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="choose_logo">"Choose your Logo "</string>
    <string name="add_photo">Add Photo</string>
    <string name="choose_babckground">Choose Babckground</string>
    <string name="upload_background">Upload Background</string>
    <string name="location_input_frome">Location Input Frome</string>
    <string name="city">city</string>
    <string name="country">Country</string>
    <string name="street">Street</string>
    <string name="submit">Submit</string>
    <string name="phone">Phone Number(Required)</string>
    <string name="whats_app">Whats App Number</string>
    <string name="verification">Verification</string>
    <string name="verification_description">Your submission is being processed. Please wait for further updates.</string>
    <string name="contact_details">Contact Details</string>
    <string name="location_details">Location Details</string>
    <string name="store_setup">Store Setup</string>
    <string name="verification_screen_label">Verification</string>
    <string name="setup">setup</string>
    <string name="location">location</string>
    <string name="contact">contact</string>
    <string name="next">next</string>
    <string name="services">Services</string>
    <string name="products">Products</string>
    <string name="expire_at">Expire At :</string>
    <string name="quantity">Quantity :</string>
    <string name="orders">Orders</string>
    <string name="order_num">Order</string>
    <string name="order_on">Order On :</string>
    <string name="at_time">At Time :</string>
    <string name="view_details">View Details</string>
    <string name="new_product">Add product</string>
    <string name="all_products">All Products</string>
    <string name="product_name_required">Product Name(Required)</string>
    <string name="expiry_date">Expiry Date (Require)</string>
    <string name="description">Description</string>
    <string name="discount">Discount Value</string>
    <string name="price">price(Required)</string>
    <string name="add_product_quantity_label">Quantity</string>
    <string name="quantity_type">Quantity Type</string>
    <string name="delivery_service">Delivery Service</string>
    <string name="detailed_description">Detailed Description</string>
    <string name="created_on">Created on:</string>
    <string name="expiry_date_label">Expiry Date</string>
    <string name="expiry_date_label_">Expiry Date:</string>
    <string name="expiry_on">Expiry on:</string>
    <string name="discount_info_label">Discount Information</string>
    <string name="main_category_label">Main Category:</string>
    <string name="sub_category">Subcategory:</string>
    <string name="category">Category</string>
    <string name="delivery_availability">Delivery Availability</string>
    <string name="edit_product_details">Edit Product Details</string>

    <string name="invalid_provider">Your Email or Phone Are Invalid </string>
    <string name="empty_filed">Require Field</string>
    <string name="no_user_found">User not found</string>
    <string name="login_successful">Login Successful</string>
    <string name="register_fragment_label">Register</string>
    <string name="loginfragment">Login</string>
    <string name="image_required">Pleas Upload Image Logo !</string>
    <string name="image_background_required">Please Upload Image for Background !</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="total_price">Total Price</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="order_infromation">Order Infromation</string>
    <string name="order_num_label">Order Num:</string>
    <string name="order_status_label">Order Status</string>
    <string name="order_date_label">Order Date:</string>
    <string name="ordered_products">Ordered Products</string>
    <string name="quantity_label">Quantity:</string>
    <string name="price_label">price:</string>
    <string name="logo_image_required">Please Select Logo</string>
    <string name="invalid_phone">Please Enter An valid Phone Number !</string>
    <string-array name="store_registration_steps">
        <item>Store Setup</item>
        <item>Location Details</item>
        <item>Contact Details </item>
        <item>Verification </item>
    </string-array>
</resources>