<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp"
        android:id="@+id/fragmentPreLogin">


        <ImageView
            android:id="@+id/fragmentPreLoginImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/image_launch_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragmentPreLoginTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/fragment_launch_screen_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentPreLoginImageView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragmentPreLoginDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/fragment_launch_screen_description"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentPreLoginTitleTv" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/fragmentPreLoginFooterLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentPreLoginDescriptionTv"
            app:layout_constraintVertical_bias=".4">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@color/md_theme_outline" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/sign_in_with"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="?colorOutline" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@color/md_theme_outline" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentPreLoginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2"

            >

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:backgroundTint="?colorPrimaryContainer"
                android:text="@string/email"
                android:textColor="?colorOnPrimaryContainer"
                app:cornerRadius="@dimen/_4sdp"
                app:icon="@drawable/ic_twotone_email_24"
                app:iconGravity="textStart"
                app:iconTint="?colorOnPrimaryContainer"

                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="?colorPrimaryContainer"
                android:text="@string/phone_number"
                android:textColor="?colorOnPrimaryContainer"
                app:cornerRadius="@dimen/_4sdp"
                app:icon="@drawable/phone"
                app:iconGravity="textStart"
                app:iconTint="?colorOnPrimaryContainer"

                />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FDF2F2"
            android:text="@string/continue_with_google"
            android:textColor="#DE3B40"
            app:cornerRadius="@dimen/_4sdp"
            app:icon="@drawable/google"
            app:iconGravity="textStart"
            app:iconTint="#DE3B40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentPreLoginLinearLayout" />

        <LinearLayout
            android:id="@+id/fragmentPreLoginFooterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/dont_have_an_account"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:gravity="start|center"
                android:text="@string/sign_up_"

                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?colorPrimary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>